Add UI draft, input and button to change grid size

--- a/index.html
+++ b/index.html
@@ -12,6 +12,22 @@
         <h1>Etch a Sketch!</h1>
         <main>
             <div class="interface">
+                <ul>
+                    <li class="colorControls">
+                        <div>black</div>
+                        <div>rainbow</div>
+                        <div>eraser</div>
+                    </li>
+                    <li class="brightnessControls">
+                        <div>darken</div>
+                        <div>brighten</div>
+                    </li>
+                    <li class="sizeControls">
+                        <label>Grid dimensions: </label>
+                        <input class="inputValue" type="number" min="1" max="100"></var>
+                        <button class="apply">Apply</button>
+                    </li>
+                </ul>
             </div>
 
             <div class="grid">
