--- a/index.html
+++ b/index.html
@@ -15,24 +15,26 @@
         <div class="interface">
             <ul>
                 <li class="colorPanel">
-                    <span>Pick your color:</span>
+                    <div class="examplePanel">
+                        <span>Color:</span>
+                        <div class="sample"></div>
+                    </div>
                     <div class="colorControls">
-                        <button>Black</button>
-                        <button>Custom</button>
-                        <button>Random</button>
-                        <button>Eraser</button>
+                        <button class="black">Black</button>
+                        <button class="random">Random</button>
+                        <button class="eraser">Eraser</button>
                     </div>
                 </li>
                 <li class="brightnessPanel">
                     <span>Adjust brightness</span>
                     <div class="brightnessControls">
-                        <button>Darken</button>
-                        <button>Brighten</button>
+                        <button class="darken">Darken</button>
+                        <button class="brighten">Brighten</button>
                     </div>
                 </li>
                 <li class="sizePanel">
                     <label>Grid dimensions:
-                        <input id="inputValue" type="number" min="1" max="100">
+                        <input id="sizeValue" type="number" value="16" min="1" max="100">
                     </label>
                     <button class="apply">New Sketch</button>
                 </li>
