Implement 10% opacity change by click
At first I misread the exercise and thought
I need to make brightness control instead of
opacity

--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
                         <button class="eraser">Eraser</button>
                     </div>
                 </li>
-                <li class="brightnessPanel">
-                    <span>Adjust brightness</span>
-                    <div class="brightnessControls">
-                        <button class="darken">Darken</button>
-                        <button class="brighten">Brighten</button>
+                <li class="opacityPanel">
+                    <span>Adjust opacity</span>
+                    <div class="opacityControls">
+                        <button class="more">+10%</button>
+                        <button class="less">-10%</button>
                     </div>
                 </li>
                 <li class="sizePanel">
